--- a/style.css
+++ b/style.css
@@ -79,8 +79,6 @@ body {
   color: ivory;
 }
 
-/* Header contains a logo or brand as well as tools and runtime info */
-
 .header > .brand {
   font-size: 8em;
   color: var(--header-text-color);
@@ -93,9 +91,9 @@ body {
   align-self: center;
   justify-self: center;
   cursor: pointer;
-  text-shadow: 2px 2px 2px var(--header-text-shadow-color);
+  text-shadow: 1px 1px 2px var(--header-text-shadow-color);
 }
-.header > .home {
+.home {
   font-size: 5em;
   color: var(--header-text-color);
   grid-row: 1;
@@ -105,64 +103,75 @@ body {
   justify-self: left;
   cursor: pointer;
   font-family: 'Londrina Outline', cursive;
-  text-shadow: 2px 2px 2px var(--header-text-shadow-color);
+  text-shadow: 1px 1px 2px var(--header-text-shadow-color);
 }
 
 /* Timer */
-.header > .timer {
+.timer {
   grid-row: 1;
   grid-column: 3;
   color: var(--header-text-color);
   font-size: 5em;
   margin: 8px;
   font-family: 'Londrina Outline', cursive;
-  text-shadow: 2px 2px 2px var(--header-text-shadow-color);
+  text-shadow: 1px 1px 2px var(--header-text-shadow-color);
 }
 
-.header > .new-game-button {
+#newGameButton {
   font-family:Arial, Helvetica, sans-serif;
-  color:rgb(201, 22, 22);
+  color: rgb(128, 128, 128);
   grid-row: 1;
   grid-column: 4;
-  grid-template-rows: 2;
-  grid-template-columns: 1;
+  display: grid;
+  grid-template-rows: 65% 35%;
+  grid-template-columns: 100%;
   align-self: right;
   margin-right: 64px;;
   font-size: 3em;
-  display: grid;
   min-height: 2.5em;
   max-height: 2.5em;
   height: 3em;
   min-width: 10em;
   width: 10em;
   background: var(--light-blue-to-bottom);
-  border: .1em solid rgba(0, 0, 0, 0.5);
+  border: 0.1em solid rgba(0, 0, 0, 0.5);
   border-radius: 0.5em;
   text-align: center;
   cursor: pointer;
   box-shadow: var(--shadow);
 }
 
-.new-game-button > #new-game-button-label {
+#newGameButton > #newGameButtonLabel {
+  grid-row: 1;
+  grid-column: 1;
+  font-family: "Londrina Solid", cursive;
   font-size: 1.0em;
-  margin: 0.05em;
 }
 
-.newGameButton > #gameOptionsDiv {
-  font-size: 1em;
+#newGameButton > #gameOptionsDiv  {
+  font-size: 0.5em;
+  grid-row: 2;
+  grid-column: 1;
   display: grid;
-  grid-template-rows: 1;
-  grid-template-columns: 4;
+  width: 80%;
+  align-self: center;
+  justify-self: center;
+  grid-template-rows: 1fr;
+  grid-template-columns: 25% 10% 25% 15%;
 }
 
-.new-game-button > #gameOptionsDiv > label {
-  font-size: 2em;
-  margin: 0.05em;
+#newGameButton > #gameOptionsDiv > label {
+  color: rgb(100, 100, 100);
+  font-size: 1em;
 }
 
-#pairsSelect {
-  font-size: 1.5em;
-  margin: 0.5em;
+#newGameButton > #gameOptionsDiv > select {
+  font-size: 1em;
+  height: 1.25em;
+}
+#newGameButton > #gameOptionsDiv > #emojis {
+  font-size: 1em;
+  height: 1.25em;
 }
 /*
 The splash is the "home" screen which is displayed when user first visits page and can be brought up
@@ -183,14 +192,17 @@ again by clicking the home/logo/brand on the header or by closing the results el
 }
 
 .explain {
-  font-size: 2rem;
-  color: red;
+  font-size: 4rem;
+  font-family: "Londrina Solid", cursive;
+  color: rgb(96, 96, 96);
 }
 
 
 .gameHistory {
   width: 100%;
   font-size: 1em;
+  font-family: "Londrina Solid", cursive;
+  color: rgb(96, 96, 96);
   border: 1px solid black;
   border-radius: 1rem;
   padding: 8px;
@@ -225,9 +237,11 @@ Results object contains detailed information about the last game played.
   justify-content: center;
 }
 
-#results > div {
+#results > div > div {
   color: black;
-  font-size: 1.5em;
+  font-size: 1em;
+  font-family: 'Londrina Solid', cursive;
+  text-shadow: 0.125em 0.125em 0.125em var(--header-text-shadow-color);
 }
 
 /*
@@ -260,12 +274,13 @@ The three contained objects are: Splash, Game and Results.
 
 .card {
   z-index: 2;
-  text-align:center;
-  justify-content: center;
+  text-align: center;
+  line-height: 100%;
   border: 1px solid black;
   overflow: visible;
   width: 10rem;
   height: 15rem;
+  padding-top: 4rem;
   border-radius: 1rem;
   font-size: 6rem;
   box-shadow: var(--shadow);
